2025-09-30 Update Project Configurations.